css + level 1/2 power + multi

--- a/main.html
+++ b/main.html
@@ -11,17 +11,17 @@
   <div id="grid-container">
       <div id="left">
         <div class="container">
-            <button id="main_1">Level 1</button>
+            <button id="main_1" class="main_button">Level 1</button>
             <p id="main_1_product">Level 1 is making you 0 per second</p>
         </div>
 
         <div class="container">
-            <button id="main_2" disabled>Level 2</button>
+            <button id="main_2" class="main_button" disabled>Level 2</button>
             <p id="main_2_product">Level 2 is multiplying level 1 by 1</p>
         </div>
 
         <div class="container">
-            <button id="main_3" disabled>Level 3</button>
+            <button id="main_3" class="main_button" disabled>Level 3</button>
             <p id="main_3_product">Level 3 is multiplying level 2 by 1</p>
         </div>
       </div>
@@ -31,6 +31,8 @@
         <button id="level_1_mult" disabled>Level 1 times 2: Cost 20</button>
         <button id="unlock_main_3" disabled>Unlock Level 3: Cost 100</button>
         <button id="level_1_power" disabled>Slower L1 decay: Cost 100</button>
+        <button id="level_2_mult" disabled>Level 2 times 2: Cost 500</button>
+        <button id="level_2_power" disabled>Slower L2 decay: Cost 1000</button>
       </div>
   </div>
 
