--- a/main.html
+++ b/main.html
@@ -24,6 +24,11 @@
             <button id="main_3" class="main_button" disabled>Level 3</button>
             <p id="main_3_product">Level 3 is multiplying level 2 by 1</p>
         </div>
+
+        <div class="container">
+            <button id="main_4" class="main_button" disabled>Level 4</button>
+            <p id="main_4_product">Level 4 is multiplying level 3 by 1</p>
+        </div>
       </div>
 
       <div id="right">
@@ -33,6 +38,9 @@
         <button id="level_1_power" disabled>Slower L1 decay: Cost 100</button>
         <button id="level_2_mult" disabled>Level 2 times 2: Cost 500</button>
         <button id="level_2_power" disabled>Slower L2 decay: Cost 1000</button>
+        <button id="unlock_main_4" disabled>Unlock Level 4: Cost 1000</button>
+        <button id="level_3_mult" disabled>Level 3 times 2: Cost 1000</button>
+        <button id="level_3_power" disabled>Slower L3 decay: Cost 1000</button>
       </div>
   </div>
 
