added level 5 and 6

--- a/main.html
+++ b/main.html
@@ -29,18 +29,31 @@
             <button id="main_4" class="main_button" disabled>Level 4</button>
             <p id="main_4_product">Level 4 is multiplying level 3 by 1</p>
         </div>
+
+        <div class="container">
+            <button id="main_5" class="main_button" disabled>Level 5</button>
+            <p id="main_5_product">Level 5 is multiplying level 4 by 1</p>
+        </div>
+
+        <div class="container">
+            <button id="main_6" class="main_button" disabled>Level 6</button>
+            <p id="main_6_product">Level 6 is multiplying level 5 by 1</p>
+        </div>
       </div>
 
       <div id="right">
         <button id="unlock_main_2" disabled>Unlock Level 2: Cost 10</button>
-        <button id="level_1_mult" disabled>Level 1 times 2: Cost 20</button>
         <button id="unlock_main_3" disabled>Unlock Level 3: Cost 100</button>
+        <button id="unlock_main_4" disabled>Unlock Level 4: Cost 1000</button>
+        <button id="unlock_main_5" disabled>Unlock Level 5: Cost 10000</button>
+        <button id="unlock_main_6" disabled>Unlock Level 6: Cost 100000</button>
+        <button id="level_1_mult" disabled>Level 1 times 2: Cost 20</button>
         <button id="level_1_power" disabled>Slower L1 decay: Cost 100</button>
         <button id="level_2_mult" disabled>Level 2 times 2: Cost 500</button>
         <button id="level_2_power" disabled>Slower L2 decay: Cost 1000</button>
-        <button id="unlock_main_4" disabled>Unlock Level 4: Cost 1000</button>
         <button id="level_3_mult" disabled>Level 3 times 2: Cost 1000</button>
         <button id="level_3_power" disabled>Slower L3 decay: Cost 1000</button>
+
       </div>
   </div>
 
